--- a/client/one/partials/add_conversion_goal_modal.html
+++ b/client/one/partials/add_conversion_goal_modal.html
@@ -72,7 +72,7 @@
         <div class="form-group" ng-if="showGAForm()" ng-class="{'has-error': !!errors.goalId}">
             <label for="ga-goal-input" class="col-xs-4 control-label">
                 Choose Goal
-                <zem-help-popover content="The name or id of Google Analytics goal that is tracking the conversions." placement="top"></zem-help-popover>
+                <zem-help-popover content="The name or id of Google Analytics goal that is tracking the conversions. Can be left empty in case of unnumbered or unnamed goal." placement="top"></zem-help-popover>
             </label>
             <div class="col-xs-4">
                 <input type="text" id="ga-goal-input" class="form-control" ng-model="conversionGoal.goalId" ng-focus="clearErrors('goalId')" />
