--- a/client/one/partials/ad_group_publishers.html
+++ b/client/one/partials/ad_group_publishers.html
@@ -5,27 +5,26 @@
 
     <div class="section table-ad-group-sources">
         <div class="button-bar">
-            <zem-custom-table-cols class="pull-right" columns="columns" categories="columnCategories"></zem-custom-table-cols>
-
-            <a id="chart-btn" ng-attr-title="{{ chartBtnTitle }}" class="btn btn-default pull-right" ng-click="toggleChart()"><img ng-src="{{ config.static_url }}/one/img/chart.svg"></a>
-
-            <div class="clearfix"></div>
+            <div class="button-bar-item">
+                <div ng-show="hasPermission('zemauth.can_modify_publisher_blacklist_status')" style="display:inline;">
+                    <zem-internal-feature ng-if="isPermissionInternal('zemauth.can_modify_publisher_blacklist_status')" popover-placement="bottom"></zem-internal-feature>
+                    <zem-dropdown
+                        zem-placeholder="Bulk Actions"
+                        zem-on-select="executeBulkAction(selected)"
+                        zem-disabled-title="At least one Publisher has to be selected before using Bulk Actions."
+                        zem-check-disabled="!isAnythingSelected()"
+                        zem-dropdown-options="bulkActions"
+                        zem-css-class="show-rows"></zem-dropdown>
+                    </div>
+                </div>
+                <zem-custom-table-cols class="pull-right" columns="columns" categories="columnCategories"></zem-custom-table-cols>
+                <a id="chart-btn" ng-attr-title="{{ chartBtnTitle }}" class="btn btn-default pull-right" ng-click="toggleChart()"><img ng-src="{{ config.static_url }}/one/img/chart.svg"></a>
+                <div class="clearfix"></div>
+            </div>
         </div>
 
-        <alert type="info" class="alert-sync">
-            Warning: not all media sources support publisher-level transparency, so totals in this view might not match the totals in media sources and content ads views.            
-        </alert>
 
-        <div ng-show="hasPermission('zemauth.can_modify_publisher_blacklist_status')" class="button-bar-item">
-            <zem-dropdown
-                   zem-placeholder="Bulk Actions"
-                   zem-on-select="executeBulkAction(selected)"
-                   zem-disabled-title="At least one Publisher has to be selected before using Bulk Actions."
-                   zem-check-disabled="!isAnythingSelected()"
-                   zem-dropdown-options="bulkActions"
-                   zem-css-class="show-rows"></zem-dropdown>
-            </div>
-
+        <!--
             <zem-custom-table-cols class="pull-right" columns="columns" categories="columnCategories"></zem-custom-table-cols>
             <a id="chart-btn" class="btn btn-default pull-right" ng-click="toggleChart()"><img ng-src="{{ config.static_url }}/one/img/chart.svg"></a>
             <span ng-switch="isSyncInProgress">
@@ -36,7 +35,11 @@
                     <a id="resync-loader" class="btn btn-default pull-right" popover="Synchronization of reporting data is currently in progress, and may take a few minutes. You can continue using the dashboard in the meantime." popover-append-to-body="true" popover-trigger="mouseenter" popover-placement="left"><div class="loader"></div></a>
                 </span>
             </span>
-        </div>
+        -->
+
+        <alert type="info" class="alert-sync">
+            Warning: not all media sources support publisher-level transparency, so totals in this view might not match the totals in media sources and content ads views.            
+        </alert>
 
         <zem-table zem-table-columns="columns" zem-table-rows="rows" zem-table-total-row="totals" zem-table-notifications="notifications" zem-table-show-loader="loadRequestInProgress" zem-table-order="order" zem-table-order-callback="orderTableData(order)" zem-table-data-status="dataStatus"></zem-table>
 
