Fixed a bug in state selector

--- a/client/one/partials/zem_state_selector.html
+++ b/client/one/partials/zem_state_selector.html
@@ -2,19 +2,19 @@
     <span ng-if="archived">Archived</span>
     <button ng-if="!archived" class="btn btn-default dropdown-toggle" dropdown-toggle>
         <div ng-if="active && !autopilotActive" class="active-circle-icon"></div>
-        <div ng-if="!active" class="pause-icon"></div>
-        <div ng-if="active && autopilotActive" class="auto-pilot-icon"></div>
+        <div ng-if="!active && !autopilotActive" class="pause-icon"></div>
+        <div ng-if="autopilotActive" class="auto-pilot-icon"></div>
         <div class="drop-arrow"></div>
     </button>
     <ul ng-if="isEditable" class="dropdown-menu enabled" dropdown-menu role="menu">
         <li>
-            <a ng-click="setState(enabledValue)">
+            <a ng-click="setState(enabledValue, autopilotPausedValue)">
                 <div class="active-circle-icon"></div><span>Enabled</span>
             </a>
         </li>
         <li class="divider"></li>
         <li>
-            <a ng-click="setState(pausedValue)">
+            <a ng-click="setState(pausedValue, autopilotPausedValue)">
                 <div class="pause-icon"></div><span>Paused</span>
             </a>
         </li>
@@ -24,14 +24,14 @@
                 zem-lazy-popover-placement="right"
                 zem-lazy-popover-animation-class="fade"
                 zem-lazy-popover-append-to-body="true">
-            <a ng-click="setAutopilotState(autopilotEnabledValue)">
+            <a ng-click="setState(value, autopilotEnabledValue)">
                 <div class="auto-pilot-icon"></div><zem-internal-feature ng-if="autopilotInternal"></zem-internal-feature><span>Auto-Pilot</span>
             </a>
         </li>
     </ul>
     <ul ng-if="!isEditable" class="dropdown-menu" dropdown-menu role="menu">
-        <li ng-if="active"><a ng-click="setState(value)"><div class="active-circle-icon"></div><span>Enabled</span></a></li>
-        <li ng-if="!active"><a ng-click="setState(value)"><div class="pause-icon"></div><span>Paused</span></a></li>
+        <li ng-if="active"><a><div class="active-circle-icon"></div><span>Enabled</span></a></li>
+        <li ng-if="!active"><a><div class="pause-icon"></div><span>Paused</span></a></li>
         <li class="dropdown-header">{{ disabledMessage }}</li>
     </ul>
 </div>
