Created zem_export_plus partial

--- a/client/one/partials/ad_group_contentadsplus.html
+++ b/client/one/partials/ad_group_contentadsplus.html
@@ -21,9 +21,7 @@
                     start-date="dateRange.startDate"
                     end-date="dateRange.endDate"
                     base-url="'api/ad_groups/' + $state.params.id + '/contentadsplus/'"
-                    options="exportOptions"
-                    columns="columns"
-                    order="order">
+                    options="exportOptions">
                 </zem-export>
             </div>
 
@@ -47,6 +45,16 @@
                     <a id="resync-loader" class="btn btn-default pull-right" popover="Synchronization of reporting data is currently in progress, and may take a few minutes. You can continue using the dashboard in the meantime." popover-append-to-body="true" popover-trigger="mouseenter" popover-placement="left"><div class="loader"></div></a>
                 </span>
             </span>
+            <div class="export-container pull-right">
+                <zem-export-plus
+                    start-date="dateRange.startDate"
+                    end-date="dateRange.endDate"
+                    base-url="'api/ad_groups/' + $state.params.id + '/contentadsplus/'"
+                    options="exportOptions"
+                    columns="columns"
+                    order="order">
+                </zem-export-plus>
+            </div>
         </div>
 
         <alert type="info" class="alert-sync" ng-show="!isSyncRecent">
