--- a/client/one/partials/media_sources.html
+++ b/client/one/partials/media_sources.html
@@ -6,17 +6,6 @@
     <div class="section table-sources">
         <div class="button-bar">
 
-            <div class="button-bar-item export-container">
-                <zem-export
-                    start-date="dateRange.startDate"
-                    end-date="dateRange.endDate"
-                    base-url="'api/' + exportBaseUrlLevel + '/' + $state.params.id + '/sources/'"
-                    options="exportOptions"
-                    columns="columns"
-                    order="order">
-                </zem-export>
-            </div>
-
             <zem-custom-table-cols class="pull-right" columns="columns" categories="columnCategories"></zem-custom-table-cols>
 
             <a id="chart-btn" ng-attr-title="{{ chartBtnTitle }}" class="btn btn-default pull-right" ng-click="toggleChart()"><img ng-src="{{ config.static_url }}/one/img/chart.svg"></a>
@@ -29,6 +18,18 @@
                     <a id="resync-loader" class="btn btn-default pull-right" popover="Synchronization of reporting data is currently in progress, and may take a few minutes. You can continue using the dashboard in the meantime." popover-append-to-body="true" popover-trigger="mouseenter" popover-placement="left"><div class="loader"></div></a>
                 </span>
             </span>
+
+            <div ng-if="hasPermission('zemauth.exports_plus')" class="export-container button-bar-item pull-right">
+              <zem-internal-feature ng-if="isPermissionInternal('zemauth.upload_content_ads')" popover-placement="bottom"></zem-internal-feature>
+                <zem-export-plus
+                    start-date="dateRange.startDate"
+                    end-date="dateRange.endDate"
+                    base-url="'api/' + exportBaseUrlLevel + '/' + $state.params.id + '/sources/'"
+                    options="exportPlusOptions"
+                    columns="columns"
+                    order="order">
+                </zem-export-plus>
+            </div>
 
             <div class="clearfix"></div>
         </div>
