--- a/client/one/partials/ad_group_contentads.html
+++ b/client/one/partials/ad_group_contentads.html
@@ -9,9 +9,7 @@
                 start-date="dateRange.startDate"
                 end-date="dateRange.endDate"
                 base-url="'api/ad_groups/' + $state.params.id + '/contentads/'"
-                options="exportOptions"
-                columns="columns"
-                order="order">
+                options="exportOptions">
             </zem-export>
             <zem-custom-table-cols class="pull-right" columns="columns" categories="columnCategories"></zem-custom-table-cols>
 
