--- a/client/one/partials/media_sources.html
+++ b/client/one/partials/media_sources.html
@@ -20,7 +20,7 @@
             </span>
 
             <div ng-if="hasPermission('zemauth.exports_plus')" class="export-container button-bar-item pull-right">
-              <zem-internal-feature ng-if="isPermissionInternal('zemauth.upload_content_ads')" popover-placement="bottom"></zem-internal-feature>
+              <zem-internal-feature ng-if="isPermissionInternal('zemauth.exports_plus')" popover-placement="bottom"></zem-internal-feature>
                 <zem-export-plus
                     start-date="dateRange.startDate"
                     end-date="dateRange.endDate"
