adding css and template

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2951,3 +2951,11 @@ zem-submission-status {
     }
 }
 
+
+select.media-source-select {
+    height: 150px;
+}
+
+.options-choices-button-group {
+    margin-top: 53px;
+}
