--- a/client/one/partials/account_agency.html
+++ b/client/one/partials/account_agency.html
@@ -68,6 +68,51 @@
         <span ng-show="discarded" class="success">Your updates have been discarded.</span>
     </form>
 
+    <div class="form-horizontal">
+        <div class="form-group">
+            <label for="media-sources-options-choices" class="col-xs-2 control-label">Media Sources <zem-help-popover content="Media sources made available on this account." placement="top"></zem-help-popover></label>
+
+            <select multiple="" class="col-xs-2 media-source-select">
+                <option>Bla</option>
+                <option>Bla</option>
+                <option>Bla</option>
+                <option>Bla</option>
+                <option>Bla</option>
+                 <option>Bla</option>
+                <option>Bla</option>
+                <option>Bla</option>
+                 <option>Bla</option>
+                <option>Bla</option>
+                <option>Bla</option>
+                <option>Bla</option>
+                 <option>Bla</option>
+                <option>Bla</option>
+                <option>Bla</option>
+                 <option>Bla</option>
+                <option>Bla</option>
+                <option>Bla</option>
+            </select>
+            <div class="col-xs-1">
+                <div class="btn-group btn-group-justified options-choices-button-group" role="group">
+                    <a class="btn btn-default">
+                        <span class="glyphicon glyphicon-arrow-left"></span>
+                    </a>
+                    <a class="btn btn-default">
+                        <span class="glyphicon glyphicon-arrow-right"></span>
+                    </a>
+                </div>
+            </div>
+            <select multiple="" class="col-xs-2 media-source-select">
+                <option>Bla</option>
+                <option>Bla</option>
+                <option>Bla</option>
+                <option>Bla</option>
+                <option>Bla</option>
+            </select>
+
+        </div>
+    </div>
+
     <div class="form-horizontal table-access-permissions" ng-if="hasPermission('zemauth.account_agency_access_permissions')">
         <div class="form-group">
             <label for="first-name-input" class="col-xs-2 control-label">
