--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2954,8 +2954,11 @@ zem-submission-status {
 
 select.media-source-select {
     height: 150px;
+    width: 100%;
 }
 
-.options-choices-button-group {
-    margin-top: 53px;
+
+
+.media-source-control-row {
+    margin-top: 5px
 }
