--- a/client/one/partials/account_agency.html
+++ b/client/one/partials/account_agency.html
@@ -72,44 +72,81 @@
         <div class="form-group">
             <label for="media-sources-options-choices" class="col-xs-2 control-label">Media Sources <zem-help-popover content="Media sources made available on this account." placement="top"></zem-help-popover></label>
 
-            <select multiple="" class="col-xs-2 media-source-select">
-                <option>Bla</option>
-                <option>Bla</option>
-                <option>Bla</option>
-                <option>Bla</option>
-                <option>Bla</option>
-                 <option>Bla</option>
-                <option>Bla</option>
-                <option>Bla</option>
-                 <option>Bla</option>
-                <option>Bla</option>
-                <option>Bla</option>
-                <option>Bla</option>
-                 <option>Bla</option>
-                <option>Bla</option>
-                <option>Bla</option>
-                 <option>Bla</option>
-                <option>Bla</option>
-                <option>Bla</option>
-            </select>
-            <div class="col-xs-1">
-                <div class="btn-group btn-group-justified options-choices-button-group" role="group">
-                    <a class="btn btn-default">
-                        <span class="glyphicon glyphicon-arrow-left"></span>
-                    </a>
-                    <a class="btn btn-default">
-                        <span class="glyphicon glyphicon-arrow-right"></span>
-                    </a>
-                </div>
-            </div>
-            <select multiple="" class="col-xs-2 media-source-select">
-                <option>Bla</option>
-                <option>Bla</option>
-                <option>Bla</option>
-                <option>Bla</option>
-                <option>Bla</option>
-            </select>
 
+            <div class="col-xs-10">
+                    
+                <div class="row media-source-control-row">
+                    <div class="col-xs-2">Available Media Sources</div>
+                    <div class="col-xs-2">Allowed Media Sources</div>
+                </div>
+
+
+                <div class="row media-source-control-row">
+
+                    <div class="col-xs-2">
+                        
+                        <select multiple="" class="media-source-select">
+                            <option>Bla</option>
+                            <option>Bla</option>
+                            <option>Bla</option>
+                            <option>Bla</option>
+                            <option>Bla</option>
+                             <option>Bla</option>
+                            <option>Bla</option>
+                            <option>Bla</option>
+                             <option>Bla</option>
+                            <option>Bla</option>
+                            <option>Bla</option>
+                            <option>Bla</option>
+                             <option>Bla</option>
+                            <option>Bla</option>
+                            <option>Bla</option>
+                             <option>Bla</option>
+                            <option>Bla</option>
+                            <option>Bla</option>
+                        </select>
+                    </div>
+         
+                    <div class="col-xs-2">
+                        
+                        <select multiple="" class="media-source-select">
+                            <option>Bla</option>
+                            <option>Bla</option>
+                            <option>Bla</option>
+                            <option>Bla</option>
+                            <option>Bla</option>
+                             <option>Bla</option>
+                            <option>Bla</option>
+                            <option>Bla</option>
+                             <option>Bla</option>
+                            <option>Bla</option>
+                            <option>Bla</option>
+                            <option>Bla</option>
+                             <option>Bla</option>
+                            <option>Bla</option>
+                            <option>Bla</option>
+                             <option>Bla</option>
+                            <option>Bla</option>
+                            <option>Bla</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="row media-source-control-row">
+                    <div class="col-xs-2">
+                        <div class="btn-group btn-group-justified" role="group">
+                            <a class="btn btn-default"><span class="glyphicon glyphicon-arrow-right"></span></a>
+                        </div>
+
+                    </div>
+                    <div class="col-xs-2">
+                        <div class="btn-group btn-group-justified" role="group">
+                            <a class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span></a>
+                        </div>                        
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 
