--- a/client/one/partials/account_agency.html
+++ b/client/one/partials/account_agency.html
@@ -85,49 +85,15 @@
 
                     <div class="col-xs-2">
                         
-                        <select multiple="" class="media-source-select">
-                            <option>Bla</option>
-                            <option>Bla</option>
-                            <option>Bla</option>
-                            <option>Bla</option>
-                            <option>Bla</option>
-                             <option>Bla</option>
-                            <option>Bla</option>
-                            <option>Bla</option>
-                             <option>Bla</option>
-                            <option>Bla</option>
-                            <option>Bla</option>
-                            <option>Bla</option>
-                             <option>Bla</option>
-                            <option>Bla</option>
-                            <option>Bla</option>
-                             <option>Bla</option>
-                            <option>Bla</option>
-                            <option>Bla</option>
+                        <select ng-model="selectedAvailableMediaSources" multiple="" class="media-source-select">
+                            <option ng-repeat="mediaSource in getAvailableMediaSources() | orderBy:mediaSourcesOrderByProp" value="{{mediaSource.value}}">{{mediaSource.name}}</option>
                         </select>
                     </div>
          
                     <div class="col-xs-2">
                         
-                        <select multiple="" class="media-source-select">
-                            <option>Bla</option>
-                            <option>Bla</option>
-                            <option>Bla</option>
-                            <option>Bla</option>
-                            <option>Bla</option>
-                             <option>Bla</option>
-                            <option>Bla</option>
-                            <option>Bla</option>
-                             <option>Bla</option>
-                            <option>Bla</option>
-                            <option>Bla</option>
-                            <option>Bla</option>
-                             <option>Bla</option>
-                            <option>Bla</option>
-                            <option>Bla</option>
-                             <option>Bla</option>
-                            <option>Bla</option>
-                            <option>Bla</option>
+                        <select ng-model="selectedAllowedMediaSources" multiple="" class="media-source-select">
+                            <option ng-repeat="mediaSource in getAllowedMediaSources() | orderBy:mediaSourcesOrderByProp" value="{{mediaSource.value}}">{{mediaSource.name}}</option>
                         </select>
                     </div>
                 </div>
@@ -135,13 +101,13 @@
                 <div class="row media-source-control-row">
                     <div class="col-xs-2">
                         <div class="btn-group btn-group-justified" role="group">
-                            <a class="btn btn-default"><span class="glyphicon glyphicon-arrow-right"></span></a>
+                            <a ng-click="addToAllowedMediaSources()" class="btn btn-default"><span class="glyphicon glyphicon-arrow-right"></span></a>
                         </div>
 
                     </div>
                     <div class="col-xs-2">
                         <div class="btn-group btn-group-justified" role="group">
-                            <a class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span></a>
+                            <a ng-click="removeFromAllowedMediaSources()" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span></a>
                         </div>                        
                     </div>
                 </div>
