--- a/client/one/partials/account_agency.html
+++ b/client/one/partials/account_agency.html
@@ -85,14 +85,14 @@
 
                     <div class="col-xs-2">
                         
-                        <select ng-model="selectedAvailableMediaSources" multiple="" class="media-source-select">
+                        <select ng-model="selectedMediaSouces.available" multiple="" class="media-source-select">
                             <option ng-repeat="mediaSource in getAvailableMediaSources() | orderBy:mediaSourcesOrderByProp" value="{{mediaSource.value}}">{{mediaSource.name}}</option>
                         </select>
                     </div>
          
                     <div class="col-xs-2">
                         
-                        <select ng-model="selectedAllowedMediaSources" multiple="" class="media-source-select">
+                        <select ng-model="selectedMediaSouces.allowed" multiple="" class="media-source-select">
                             <option ng-repeat="mediaSource in getAllowedMediaSources() | orderBy:mediaSourcesOrderByProp" value="{{mediaSource.value}}">{{mediaSource.name}}</option>
                         </select>
                     </div>
