--- a/client/one/partials/account_agency.html
+++ b/client/one/partials/account_agency.html
@@ -76,8 +76,8 @@
             <div class="col-xs-10">
                     
                 <div class="row media-source-control-row">
-                    <div class="col-xs-2">Available Media Sources</div>
-                    <div class="col-xs-2">Allowed Media Sources</div>
+                    <div class="col-xs-2">Available</div>
+                    <div class="col-xs-2">Allowed</div>
                 </div>
 
 
