--- a/client/one/partials/ad_group_publishers.html
+++ b/client/one/partials/ad_group_publishers.html
@@ -1,6 +1,6 @@
 <div class="page page-ad-group-publishers">
     <div class="section" ng-class="{'chart-hidden': chartHidden}">
-        <zem-chart zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
+    <zem-chart zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
     </div>
 
     <div class="section table-ad-group-sources">
@@ -11,7 +11,7 @@
                     <zem-dropdown
                         zem-placeholder="Manage Blacklist"
                         zem-on-select="executeBulkAction(selected)"
-                        zem-disabled-title="At least one Publisher has to be selected before using Manage Blacklist."
+                        zem-disabled-title="At least one Publisher has to be selected before using Manage Blacklist and all selected publishers need to be either Blacklisted or not blacklisted."
                         zem-check-disabled="!isAnythingSelected()"
                         zem-dropdown-options="bulkActions"
                         zem-css-class="show-rows"></zem-dropdown>
