Adressed code review comments

--- a/client/one/partials/media_sources.html
+++ b/client/one/partials/media_sources.html
@@ -23,7 +23,7 @@
                 <zem-export-plus
                     start-date="dateRange.startDate"
                     end-date="dateRange.endDate"
-                    base-url="'api/' + exportBaseUrlLevel + '/' + $state.params.id + '/sources/'"
+                    base-url="exportBaseUrl"
                     options="exportPlusOptions"
                     columns="columns"
                     order="order">
