Fix publishers view column selection

--- a/client/one/partials/ad_group_publishers.html
+++ b/client/one/partials/ad_group_publishers.html
@@ -17,7 +17,7 @@
                         zem-css-class="show-rows"></zem-dropdown>
                     </div>
                 </div>
-                <zem-custom-table-cols class="pull-right" columns="columns" categories="columnCategories" localStoragePrefix="localStoragePrefix"></zem-custom-table-cols>
+                <zem-custom-table-cols class="pull-right" columns="columns" categories="columnCategories" local-storage-prefix="localStoragePrefix"></zem-custom-table-cols>
                 <a id="chart-btn" ng-attr-title="{{ chartBtnTitle }}" class="btn btn-default pull-right" ng-click="toggleChart()"><img ng-src="{{ config.static_url }}/one/img/chart.svg"></a>
                 <div class="clearfix"></div>
             </div>
