Fix remaining views

--- a/client/one/partials/account_campaigns.html
+++ b/client/one/partials/account_campaigns.html
@@ -25,7 +25,7 @@
                 </zem-export>
             </div>
 
-            <zem-custom-table-cols class="pull-right" columns="columns" categories="columnCategories" localStoragePrefix="localStoragePrefix"></zem-custom-table-cols>
+            <zem-custom-table-cols class="pull-right" columns="columns" categories="columnCategories" local-storage-prefix="localStoragePrefix"></zem-custom-table-cols>
 
             <a id="chart-btn" ng-attr-title="{{ chartBtnTitle }}" class="btn btn-default pull-right" ng-click="toggleChart()"><img ng-src="{{ config.static_url }}/one/img/chart.svg"></a>
 
