--- a/client/one/partials/ad_group_contentads.html
+++ b/client/one/partials/ad_group_contentads.html
@@ -11,7 +11,7 @@
                 base-url="'api/ad_groups/' + $state.params.id + '/contentads/'"
                 options="exportOptions">
             </zem-export>
-            <zem-custom-table-cols class="pull-right" columns="columns" categories="columnCategories" localStoragePrefix="localStoragePrefix"></zem-custom-table-cols>
+            <zem-custom-table-cols class="pull-right" columns="columns" categories="columnCategories" local-storage-prefix="localStoragePrefix"></zem-custom-table-cols>
 
             <a id="chart-btn" ng-attr-title="{{ chartBtnTitle }}" class="btn btn-default pull-right" ng-click="toggleChart()"><img ng-src="{{ config.static_url }}/one/img/chart.svg"></a>
 
